[package]
name = "simple_math_compiler_rs"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cc = "^1.0"

[dependencies]
lazy_static = "^1"
libc = "^0.2"

[features]
fn_traits = []
ignore_target = []
